--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,10 @@
     "target": "ES2022",
     "outDir": "./dist",
     "rootDir": "./src",
-    "esModuleInterop": true
-  }
+    "strict": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  },
+  "include": ["backend/src/**/*", "backend/tests/**/*"]
 }
