Update folder structure and Added yarn

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -24,5 +24,9 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
-  }
+  },
+  "main": "main.tsx",
+  "repository": "https://github.com/ChihebBENCHEIKH1/E-commerce-",
+  "author": "Chiheb BEN CHEIKH",
+  "license": "yes"
 }
