--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "inversify": "^6.2.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.6",
     "nodemailer": "^6.10.0",
     "otplib": "^12.0.1",
