--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@types/node": "^22.13.0",
     "axios": "^1.7.9",
+    "history": "^5.3.0",
+    "mui-one-time-password-input": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "6",
     "styled-components": "^6.1.14"
