--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,11 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "@sentry/react": "^9.1.0",
+    "@sentry/tracing": "^7.120.3",
+    "@sentry/vite-plugin": "^3.2.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@types/node": "^22.13.0",
     "axios": "^1.7.9",
     "history": "^5.3.0",
@@ -35,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^14.0.3",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
