--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.13.9",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
@@ -33,6 +34,9 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@sentry/node": "^9.1.0",
+    "@sentry/tracing": "^7.120.3",
+    "@types/stripe": "^8.0.417",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -49,6 +53,8 @@
     "mongoose": "^8.9.6",
     "nodemailer": "^6.10.0",
     "otplib": "^12.0.1",
-    "reflect-metadata": "^0.2.2"
+    "pdfkit": "^0.16.0",
+    "reflect-metadata": "^0.2.2",
+    "stripe": "^17.6.0"
   }
 }
