Update ts config

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,5 +17,6 @@
     // This improves issue grouping in Sentry.
     "sourceRoot": "/"
   },
-  "include": ["backend/src/**/*", "backend/tests/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
