--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon --ext ts --exec ts-node src/index.ts",
     "build": "tsc && npm run sentry:sourcemaps",
     "start": "node dist/index.js",
-    "seed": "ts-node src/scripts/initialDatabaseMigration.ts",
+    "migrate": "ts-node src/scripts/initialDatabaseMigration.ts",
     "test": "nodemon --ext ts --exec ts-node tests/index.ts && npx jest",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org ben-no --project node ./dist && sentry-cli sourcemaps upload --org ben-no --project node ./dist"
   },
@@ -23,10 +23,12 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.13.0",
+    "@types/node": "^22.13.5",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.13.9",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
@@ -58,6 +60,8 @@
     "otplib": "^12.0.1",
     "pdfkit": "^0.16.0",
     "reflect-metadata": "^0.2.2",
-    "stripe": "^17.6.0"
+    "stripe": "^17.6.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
